# plugins

./: CLAUDE.md  CMakeLists.txt  README.md  rebuild_all.sh  test_4keq_spectrum.cpp  test_fft.cpp  test_fft_simple  test_fft_simple.cpp
.claude/commands/: add-plugin.md  release-plugin.md
.github/workflows/: build.yml
docker/: build_release.sh
groovemind-training/brush-samples/: License.txt
groovemind-training/brush-samples/Brush Rock Samples/: Pettinhouse_Brush Rock.sfz  Sd brush 7.nov
groovemind-training/brush-samples/Brush country jazz Samples/: HHP Pedal.nov  Pettinhouse_Brush country jazz.sfz  Sd Arbore Brush 4.nov  Sound 1.nov  Sound 2.nov  Sound 8.nov  Sound 9.nov
groovemind-training/brush-samples/Brush country rock 2 Samples/: 1.nov  11.nov  1e.nov  6e.nov  8.nov  Pettinhouse_Brush country rock 2.sfz
groovemind-training/brush-samples/Brush jazz Samples/: 1.nov  (+9 more)
plugins/4k-eq/: CMakeLists.txt  EQCurveDisplay.h  FourKEQ.cpp  FourKEQ.h  PluginEditor.cpp  PluginEditor.h  SSLSaturation.h  SpectrumAnalyzer.h  SpectrumAnalyzerNew.h
plugins/DrummerClone/: CMakeLists.txt  PROJECT_STATUS.md  README.md
plugins/PlateReverb/: CMakeLists.txt  CustomDelays.cpp  CustomDelays.h  DattorroPlate.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utilities.h
plugins/StudioReverb/: CMakeLists.txt
plugins/StudioVerb/: CMakeLists.txt  PluginProcessor.cpp  ReverbEngineEnhanced.h
plugins/TapeMachine/: CMakeLists.txt
plugins/convolution-reverb/: IRWaveformDisplay.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugins/harmonic-generator/: CMakeLists.txt  HardwarePresets.cpp  HardwarePresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
plugins/multi-comp/: AppConfig.h  CMakeLists.txt  ModernCompressorPanels.h  UniversalCompressorTests.cpp  multicomp.cpp
plugins/multi-q/: BandDetailPanel.cpp  BandDetailPanel.h  BritishEQCurveDisplay.h  BritishEQProcessor.h  CMakeLists.txt  DynamicEQProcessor.h  EQBand.h  EQGraphicDisplay.cpp  EQGraphicDisplay.h  FFTAnalyzer.h  LinearPhaseEQProcessor.h  MultiQ.cpp  MultiQ.h  MultiQEditor.cpp  MultiQEditor.h  MultiQLookAndFeel.h  PultecCurveDisplay.cpp  PultecCurveDisplay.h  PultecLookAndFeel.h  PultecProcessor.h  SSLSaturation.h  VintageTubeEQLookAndFeel.h
plugins/shared/: LunaLookAndFeel.h
plugins/universal-compressor/: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  EnhancedCompressorEditor.cpp  ModernCompressorPanels.h  UniversalCompressor.cpp  UniversalCompressor.h
(+37 files in other folders)
